--- a/server/public/hello.html
+++ b/server/public/hello.html
@@ -1,7 +1,8 @@
 <html>
-
-    <script src="/ws_test.js"></script>
 <body>
-    <p>Hello world!</p>
+    <input id="code_field" type="text"></input><button id="submit_button">submit</button> <br> <br>
+
+    <input type="text" id="msg_field"><button id="send_msg">Send a message!</button>
+    <script src="/ws_test.js"></script>
 </body>
 </html>
